Fixed positioning of footer on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -135,7 +135,7 @@ body {
 
 .footer {
     position: absolute;
-    bottom: 30px;
+    bottom: 3vh;
     left: 50%;
     transform: translate(-50%, -50%);
 
